--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,4 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+
+.pop {
+  width: 300px;
+  height: 50px;
+  position: fixed;
+  top: -50px;
+  left: calc(50% - 100px);
+  background-color: red;
+  z-index: 200001;
+  display: flex;
+  place-items: center;
+  border-radius: 10px;
+}
+.pop h3 {
+  width: 100%;
+  text-align: center;
+}
+
 .details {
   width: 100%;
   display: grid;
@@ -6,22 +24,21 @@
   justify-content: center;
   align-items: center;
 }
-.details .container{
+.details .container {
   display: block;
   max-width: 100%;
   width: 100%;
   background-color: #fff;
   padding: 2% 5%;
   border-radius: 5px;
-  box-shadow: 0 5px 10px rgba(0,0,0,0.15);
-  
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
 }
-.details .container .title{
+.details .container .title {
   font-size: 25px;
   font-weight: 500;
   position: relative;
 }
-.details .container .title::before{
+.details .container .title::before {
   content: "";
   position: absolute;
   left: 10px;
@@ -31,19 +48,18 @@
   border-radius: 5px;
   background: linear-gradient(135deg, #71b7e6, #9b59b6);
 }
-.content form .user-details{
+.content form .user-details {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 20px 0 12px 0;
- 
 }
-form .user-details .input-box{
+form .user-details .input-box {
   margin-bottom: 15px;
   width: calc(100% / 3 - 20px);
 }
-form .input-box.dur{
+form .input-box.dur {
   margin-bottom: 15px;
   width: calc(100% / 1 - 20px);
   display: flex;
@@ -51,12 +67,12 @@ form .input-box.dur{
   justify-content: space-around;
   align-items: center;
 }
-form .input-box span.details{
+form .input-box span.details {
   display: block;
   font-weight: 500;
   margin-bottom: 5px;
 }
-.user-details .input-box input{
+.user-details .input-box input {
   height: 45px;
   width: 100%;
   outline: none;
@@ -67,7 +83,7 @@ form .input-box span.details{
   border-bottom-width: 2px;
   transition: all 0.3s ease;
 }
-.input-box.dur input{
+.input-box.dur input {
   height: 45px;
   width: 100%;
   outline: none;
@@ -79,25 +95,25 @@ form .input-box span.details{
   transition: all 0.3s ease;
 }
 form .input-box input:focus,
-form .input-box input:valid{
+form .input-box input:valid {
   border-color: #9b59b6;
 }
- form .gender-title{
+form .gender-title {
   font-size: 20px;
   font-weight: 500;
- }
- form .category{
-   display: flex;
-   width: 80%;
-   margin: 14px 0 ;
-   justify-content: space-between;
- }
- form .category label{
-   display: flex;
-   align-items: center;
-   cursor: pointer;
- }
- form .category label .dot{
+}
+form .category {
+  display: flex;
+  width: 80%;
+  margin: 14px 0;
+  justify-content: space-between;
+}
+form .category label {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+form .category label .dot {
   height: 18px;
   width: 18px;
   border-radius: 50%;
@@ -106,22 +122,22 @@ form .input-box input:valid{
   border: 5px solid transparent;
   transition: all 0.3s ease;
 }
- #dot-1:checked ~ .category label .one,
- #dot-2:checked ~ .category label .two,
- #dot-3:checked ~ .category label .three{
-   background: #9b59b6;
-   border-color: #d9d9d9;
- }
- form  input[type="date"]{
-   appearance: none;
- }
+#dot-1:checked ~ .category label .one,
+#dot-2:checked ~ .category label .two,
+#dot-3:checked ~ .category label .three {
+  background: #9b59b6;
+  border-color: #d9d9d9;
+}
+form input[type="date"] {
+  appearance: none;
+}
 form textarea {
   width: 80%;
-  height:300px;
-  border:2px black solid;
+  height: 300px;
+  border: 2px black solid;
   border-radius: 10px;
   padding: 10px;
-  margin:3%;
+  margin: 3%;
 }
 form select {
   appearance: none;
@@ -134,101 +150,98 @@ form select {
   border: 1px solid #ccc;
   border-bottom-width: 2px;
   transition: all 0.3s ease;
-
 }
- form .button{
-   height: 45px;
-   margin: 35px 0
- }
- form .button input{
-   height: 100%;
-   width: 100%;
-   border-radius: 5px;
-   border: none;
-   color: #fff;
-   font-size: 18px;
-   font-weight: 500;
-   letter-spacing: 1px;
-   cursor: pointer;
-   transition: all 0.3s ease;
-   background-color: #2a2185;
- }
- form .button input:hover{
+form .button {
+  height: 45px;
+  margin: 35px 0;
+}
+form .button input {
+  height: 100%;
+  width: 100%;
+  border-radius: 5px;
+  border: none;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  background-color: #2a2185;
+}
+form .button input:hover {
   /* transform: scale(0.99); */
-  border:4px #2a2185 solid;
-  color:#2a2185;
+  border: 4px #2a2185 solid;
+  color: #2a2185;
   background: #ffffff;
-  }
- @media(max-width: 584px){
+}
+@media (max-width: 584px) {
   .details {
     padding: 0;
   }
- .container{
-  max-width: 90%;
-}
-form .user-details .input-box{
+  .container {
+    max-width: 90%;
+  }
+  form .user-details .input-box {
     padding: 5% 2%;
     margin-bottom: 15px;
     width: 100%;
   }
-  form .category{
+  form .category {
     width: 100%;
   }
-  .content form .user-details{
+  .content form .user-details {
     max-height: 400px;
     overflow-y: scroll;
   }
-  .user-details::-webkit-scrollbar{
+  .user-details::-webkit-scrollbar {
     width: 5px;
   }
-
-  }
-  @media(max-width: 459px){
-  .container .content .user-details{
+}
+@media (max-width: 459px) {
+  .container .content .user-details {
     flex-direction: row;
-    border:2px #2a2185 solid;
+    border: 2px #2a2185 solid;
     border-radius: 10px;
   }
-form .user-details .input-box{
+  form .user-details .input-box {
     margin-bottom: 15px;
     width: 100%;
   }
-  form .category{
+  form .category {
     width: 100%;
     flex-direction: column;
   }
-  .user-details::-webkit-scrollbar{
+  .user-details::-webkit-scrollbar {
     width: 5px;
-    height:10px;
+    height: 10px;
   }
-
 }
 @media screen and (min-width: 1400px) {
-form .user-details .input-box{
-  width: calc(100% / 4 - 20px);
-}
-  form .input-box span.details{
+  form .user-details .input-box {
+    width: calc(100% / 4 - 20px);
+  }
+  form .input-box span.details {
     font-size: 14px;
   }
 }
 
 @media screen and (min-width: 1450px) {
-  form .input-box span.details{
+  form .input-box span.details {
     font-size: 15px;
   }
 }
 
 @media screen and (min-width: 1500px) {
-  form .input-box span.details{
+  form .input-box span.details {
     font-size: 16px;
   }
 }
 
-@media(max-width:770px) {
-.details .container {
-    margin:0 5%;
+@media (max-width: 770px) {
+  .details .container {
+    margin: 0 5%;
   }
-form .user-details .input-box{
-  width: calc(100% - 20px);
-}
+  form .user-details .input-box {
+    width: calc(100% - 20px);
+  }
 }
