--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,10 +151,15 @@ body {
 .topbar {
   width: 100%;
   height: 60px;
+  position: sticky;
+  top: 0px;
+  right: 0px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 10px;
+  z-index: 200000;
+
 }
 
 .toggle {
