--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -3,7 +3,7 @@
 .pop {
   width: 300px;
   height: 50px;
-  position: fixed;
+  position: absolute;
   top: -50px;
   left: calc(50% - 100px);
   background-color: red;
