--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,10 @@
 /* =========== Google Fonts ============ */
+
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap");
+
 /* =============== Globals ============== */
+
 * {
   font-family: "Poppins", sans-serif;
   margin: 0;
@@ -29,6 +32,7 @@ body {
 }
 
 /* =============== Navigation ================ */
+
 .navigation {
   position: fixed;
   width: 300px;
@@ -38,6 +42,7 @@ body {
   transition: 0.5s;
   overflow: hidden;
 }
+
 .navigation.active {
   width: 80px;
 }
@@ -75,6 +80,7 @@ body {
   text-decoration: none;
   color: var(--white);
 }
+
 .navigation ul li:hover a,
 .navigation ul li.hovered a {
   color: var(--blue);
@@ -88,6 +94,7 @@ body {
   line-height: 75px;
   text-align: center;
 }
+
 .navigation ul li a .icon ion-icon {
   font-size: 1.75rem;
 }
@@ -103,6 +110,7 @@ body {
 }
 
 /* --------- curve outside ---------- */
+
 .navigation ul li:hover a::before,
 .navigation ul li.hovered a::before {
   content: "";
@@ -116,6 +124,7 @@ body {
   box-shadow: 35px 35px 0 10px var(--white);
   pointer-events: none;
 }
+
 .navigation ul li:hover a::after,
 .navigation ul li.hovered a::after {
   content: "";
@@ -135,6 +144,7 @@ body {
 }
 
 /* ===================== Main ===================== */
+
 .main {
   position: absolute;
   width: calc(100% - 300px);
@@ -143,6 +153,7 @@ body {
   background: var(--white);
   transition: 0.5s;
 }
+
 .main.active {
   width: calc(100% - 80px);
   left: 80px;
@@ -159,8 +170,9 @@ body {
   align-items: center;
   padding: 0 10px;
   z-index: 200000;
-  transition: all .7s ease-in-out;
+  transition: all 0.7s ease-in-out;
 }
+
 .topbar.active {
   background-color: var(--white);
   box-shadow: 10px 10px 20px #bebebe;
@@ -204,6 +216,7 @@ body {
   position: absolute;
   top: 0;
   left: 10px;
+  place-self: center;
   font-size: 1.2rem;
 }
 
@@ -226,6 +239,7 @@ body {
 }
 
 /* ======================= Cards ====================== */
+
 .cardBox {
   position: relative;
   width: 100%;
@@ -268,6 +282,7 @@ body {
 .cardBox .card:hover {
   background: var(--blue);
 }
+
 .cardBox .card:hover .numbers,
 .cardBox .card:hover .cardName,
 .cardBox .card:hover .iconBx {
@@ -275,6 +290,7 @@ body {
 }
 
 /* ================== Order Details List ============== */
+
 .details {
   position: relative;
   width: 100%;
@@ -300,11 +316,13 @@ body {
   justify-content: space-between;
   align-items: flex-start;
 }
+
 .cardHeader h2 {
   position: relative;
   font-weight: 600;
   color: var(--blue);
 }
+
 .cardHeader h2::before {
   content: "";
   position: absolute;
@@ -314,6 +332,7 @@ body {
   height: 3px;
   background-color: var(--blue);
 }
+
 .cardHeader .btn {
   position: relative;
   padding: 5px 10px;
@@ -346,22 +365,30 @@ body {
   border-collapse: collapse;
   margin-top: 10px;
   /* min-height: 100%; */
-  overflow-y: scroll;
+  overflow-x: scroll;
 }
+
 .details table thead td {
   font-weight: 600;
 }
+
 .details .recentOrders table tr {
   color: var(--black1);
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 10%;
+  padding: 10px;
 }
+
 .details .recentOrders table tr:last-child {
   border-bottom: none;
+  border-radius: 10%;
 }
+
 .details .recentOrders table tbody tr:hover {
   background: var(--blue);
   color: var(--white);
 }
+
 .details .recentOrders table tr td {
   padding: 10px 3px;
   text-align: center;
@@ -379,15 +406,25 @@ body {
   width: 100%;
   height: 100%;
 }
+
 /* .details .recentOrders table tr td:last-child { */
+
 /*   text-align: end; */
+
 /* } */
+
 /* .details .recentOrders table tr td:nth-child(2) { */
+
 /*   text-align: end; */
+
 /* } */
+
 /* .details .recentOrders table tr td:nth-child(3) { */
+
 /*   text-align: center; */
+
 /* } */
+
 .status.delivered {
   padding: 4px 6px;
   background: #8de05c;
@@ -396,6 +433,7 @@ body {
   font-size: 14px;
   font-weight: 500;
 }
+
 .status.pending {
   padding: 4px 6px;
   background: #e9b10a;
@@ -404,6 +442,7 @@ body {
   font-size: 14px;
   font-weight: 500;
 }
+
 .status.return {
   padding: 4px 6px;
   background: #f00;
@@ -412,6 +451,7 @@ body {
   font-size: 14px;
   font-weight: 500;
 }
+
 .status.inProgress {
   padding: 5px 6px;
   background: #1795fe;
@@ -420,9 +460,11 @@ body {
   font-size: 14px;
   font-weight: 500;
 }
+
 .recentCustomers * {
   border-radius: 10px;
 }
+
 .recentCustomers {
   position: relative;
   min-width: 100%;
@@ -432,6 +474,7 @@ body {
   box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
   border-radius: 20px;
 }
+
 .recentCustomers table thead {
   /* background: linear-gradient(145deg, #cacad850, #f0f0f050); */
   background-color: #2a218a;
@@ -451,14 +494,17 @@ body {
   font-weight: 500;
   line-height: 1.2rem;
 }
+
 .recentCustomers table thead tr td h4 span {
   font-size: 14px;
   color: var(--black2);
 }
+
 .recentCustomers table tbody td:hover {
   background: var(--blue);
   color: var(--white);
 }
+
 .recentCustomers table tr:hover td h4 span {
   color: var(--white);
 }
@@ -477,6 +523,7 @@ body {
 }
 
 /* ====================== Responsive Design ========================== */
+
 @media (max-width: 991px) {
   .navigation {
     left: -300px;
