--- a/assets/css/warrior.css
+++ b/assets/css/warrior.css
@@ -1,30 +1,44 @@
-.details { 
-display: block;
+.details {
+    display: block;
 }
+
 .details .cardHeader {
-  display: block;
+    display: block;
 }
+
+.details .recentOrders .table-container {
+    overflow-x: auto;
+    white-space: nowrap;
+}
+
 .details .cardHeader h2 {
-  position: relative;
-  width:100%;
- text-align: center;
-  padding: 10px 0;
+    position: relative;
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
 }
+
 .details .cardHeader h2::before {
-  content: '';
-  position:absolute;
-  bottom: 0;
-  left:40%;
-  width:20%;
-  height:3px;
-  background-color: var(--blue);
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 40%;
+    width: 20%;
+    height: 3px;
+    background-color: var(--blue);
 }
+
+.recentOrders table tbody tr {
+    border-radius: 10px;
+}
+
 .recentOrders table tr td .btn {
-  text-decoration: none;
-  font-size: 24px;
-  font-weight: bold;
-  color:#1795fe;
+    text-decoration: none;
+    font-size: 24px;
+    font-weight: bold;
+    color: #1795fe;
 }
+
 .recentOrders table tr td .btn.del {
-  color: #f08;
+    color: #f08;
 }
