--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -1,25 +1,25 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 .details {
   width: 100%;
   display: block;
   padding: 3% 7%;
 }
-.details .container{
+.details .container {
   display: block;
   width: 100%;
   background-color: #fff;
   padding: 25px 30px;
   border-radius: 5px;
-  box-shadow: 0 5px 10px rgba(0,0,0,0.15);
-  overflow-x:scroll;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+  overflow-x: scroll;
 }
-.details .container .title{
+.details .container .title {
   font-size: 25px;
   font-weight: 500;
   position: relative;
   width: 100%;
 }
-.details .container .title::before{
+.details .container .title::before {
   content: "";
   position: absolute;
   left: 10px;
@@ -29,26 +29,30 @@
   border-radius: 5px;
   background: linear-gradient(135deg, #71b7e6, #9b59b6);
 }
-.content  .user-details{
+.details .container {
+  padding-inline-start: 3%;
+}
+.content .user-details {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  gap: 2%;
+  /* justify-content: space-between; */
   margin: 20px 0 12px 0;
-  overflow-x:scroll;
+  overflow-x: scroll;
 }
- .user-details .input-box{
+.user-details .input-box {
   margin-bottom: 15px;
   width: calc(100% / 3 - 20px);
 }
- .input-box span.details{
+.input-box span.details {
   display: block;
   font-weight: 500;
   margin-bottom: 5px;
   color: var(--blue);
   text-align: center;
 }
-.user-details .input-box .input{
+.user-details .input-box .input {
   /* height: 45px; */
   padding: 5px;
   width: 100%;
@@ -61,22 +65,23 @@
   text-align: center;
 }
 
- .gender-title{
+.gender-title {
   font-size: 20px;
   font-weight: 500;
- }
- .category{
-   display: flex;
-   width: 80%;
-   margin: 14px 0 ;
-   justify-content: space-between;
- }
-  .category label{
-   display: flex;
-   align-items: center;
-   cursor: pointer;
- }
-  .category label .dot{
+  padding: 100px 0;
+}
+.category {
+  display: flex;
+  width: 80%;
+  margin: 14px 0;
+  justify-content: space-between;
+}
+.category label {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.category label .dot {
   height: 18px;
   width: 18px;
   border-radius: 50%;
@@ -85,141 +90,298 @@
   border: 5px solid transparent;
   transition: all 0.3s ease;
 }
- #dot-1:checked ~ .category label .one,
- #dot-2:checked ~ .category label .two,
- #dot-3:checked ~ .category label .three{
-   background: #9b59b6;
-   border-color: #d9d9d9;
- }
+#dot-1:checked ~ .category label .one,
+#dot-2:checked ~ .category label .two,
+#dot-3:checked ~ .category label .three {
+  background: #9b59b6;
+  border-color: #d9d9d9;
+}
 div.radio {
-width: 17px;
-  height: 17px;
+  width: 20px;
+  height: 20px;
   border: 1px solid black;
   border-radius: 50%;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-
+  /* justify-content: center;
+  align-items: center; */
+  place-items: center;
 }
 .radio div {
-  width: 12px;
-  height: 12px;
+  width: 15px;
+  height: 15px;
   border-radius: 50%;
+  place-self: center;
 }
 .radio div.checked {
   background-color: var(--blue);
 }
- .textarea {
+.textarea {
   width: 80%;
-  height:300px;
-  border:2px black solid;
+  height: 300px;
+  border: 2px black solid;
   border-radius: 10px;
-  padding: 10px;
-  margin:2% 10%;
+  padding: 20px 30px;
+  margin: 2% 10%;
   overflow-y: scroll;
+  font-size: 18px;
 }
-  .button{
-   margin: 35px 0;
+.button {
+  margin: 35px 0;
   display: flex;
   justify-content: flex-end;
-  gap:2%;
- }
-  .button .btn{
+  gap: 2%;
+}
+.button .btn {
   padding: 10px;
-   height: 50px;
-   width: 200px;
-   border-radius: 20px;
-   border: none;
-   color: #fff;
-   font-size: 18px;
-   font-weight: 500;
-   letter-spacing: 1px;
-   cursor: pointer;
-   transition: all 0.3s ease;
-   background-color: #2a2185;
+  height: 50px;
+  width: 200px;
+  border-radius: 20px;
+  border: none;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  background-color: #2a2185;
   text-decoration: none;
   text-align: center;
- }
-  .button .btn:hover{
+}
+.button .btn:hover {
   transform: scale(1.01);
   font-size: 20px;
-  border:4px #2a2185 solid;
-  color:#2a2185;
+  border: 4px #2a2185 solid;
+  color: #2a2185;
   background: var(--white);
-  }
-.button .btn ion-icon{
-font-size: 25px;
+}
+.button .btn ion-icon {
+  font-size: 25px;
   font-weight: bold;
 }
- @media(max-width: 584px){
- .container{
-  max-width: 100%;
+.checkbox {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 2% 0;
 }
- .user-details .input-box{
+.checkbox .checkbox-container {
+  display: inline-block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 16px;
+  user-select: none;
+}
+
+.checkbox .custom-checkbox {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  background-color: #eee;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+  left: 6.5px;
+  top: 2px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  transform: rotate(45deg);
+}
+
+.custom-checkbox:checked ~ .checkmark {
+  background-color: var(--blue); /*#2196f3*/
+  box-shadow: 0 3px 7px rgba(33, 150, 243, 0.3);
+}
+
+.custom-checkbox:checked ~ .checkmark:after {
+  display: block;
+}
+
+@keyframes checkAnim {
+  0% {
+    height: 0;
+  }
+
+  100% {
+    height: 10px;
+  }
+}
+
+.custom-checkbox:checked ~ .checkmark:after {
+  animation: checkAnim 0.2s forwards;
+}
+
+.radio-button-container {
+  width: 80%;
+  display: flex;
+  padding-inline: 10%;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  margin: 1% 0;
+}
+
+.radio-button {
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+}
+
+.radio-button__input {
+  display: none;
+}
+
+.radio-button__label {
+  display: inline-block;
+  padding-left: 30px;
+  margin-bottom: 10px;
+  position: relative;
+  font-size: 15px;
+  color: var(--black1);
+  font-weight: 600;
+  cursor: pointer;
+  text-transform: uppercase;
+  transition: all 0.3s ease;
+}
+
+.radio-button__custom {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 2px solid #555;
+  transition: all 0.3s ease;
+}
+
+.radio-button__input:checked ~ .radio-button__label .radio-button__custom {
+  background-color: var(--blue);
+  border-color: transparent;
+  transform: scale(0.8);
+  box-shadow: 0 0 20px var(--blue);
+}
+
+.radio-button__input:checked ~ .radio-button__label {
+  color: var(--blue);
+}
+
+.radio-button__label:hover .radio-button__custom {
+  transform: scale(1.2);
+  border-color: var(--blue);
+  box-shadow: 0 0 20px var(--blue);
+}
+
+@media (max-width: 584px) {
+  .container {
+    max-width: 100%;
+  }
+  .user-details .input-box {
     margin-bottom: 15px;
     width: 100%;
   }
-   .category{
+  .category {
     width: 100%;
   }
-  .content  .user-details{
+  .content .user-details {
     max-height: 400px;
     overflow-y: scroll;
   }
-  .user-details::-webkit-scrollbar{
+  .user-details::-webkit-scrollbar {
     width: 5px;
   }
-
-  }
-  @media(max-width: 459px){
-  .container .content .user-details{
+}
+@media (max-width: 459px) {
+  .container .content .user-details {
     flex-direction: row;
-    border:2px #2a2185 solid;
+    border: 2px #2a2185 solid;
     border-radius: 10px;
-    
   }
- .user-details .input-box{
+  .user-details .input-box {
     margin-bottom: 15px;
     padding-inline-start: 5%;
     width: 100%;
   }
-   .category{
+  .category {
     width: 100%;
     flex-direction: column;
   }
-  .user-details::-webkit-scrollbar{
+  .user-details::-webkit-scrollbar {
     width: 5px;
-    height:10px;
+    height: 10px;
   }
-
 }
 @media screen and (min-width: 1400px) {
   .details {
     padding-inline: 10%;
   }
- .user-details .input-box{
-  width: calc(100% / 4 - 20px);
-}
-   .input-box span.details{
+  .user-details .input-box {
+    width: calc(100% / 4 - 20px);
+  }
+  .input-box span.details {
     font-size: 14px;
   }
 }
 
 @media screen and (min-width: 1450px) {
-   .input-box span.details{
+  .input-box span.details {
     font-size: 15px;
   }
 }
 
 @media screen and (min-width: 1500px) {
-   .input-box span.details{
+  .input-box span.details {
     font-size: 16px;
   }
 }
 
-@media(max-width:770px) {
-
- .user-details .input-box{
-  width: calc(100% - 20px);
+@media (max-width: 770px) {
+  .user-details .input-box {
+    width: calc(100% - 20px);
+  }
 }
+
+@media print {
+  body * {
+    visibility: hidden;
+  }
+  .print,
+  .print * {
+    visibility: visible;
+  }
+  .print {
+    width: 100%;
+    height: 100%;
+    /* position: absolute;
+    top: 0px;
+    left: 0px; */
+  }
+  .print .user-details .input-box {
+    width: 100%;
+    width: calc(100% / 4 - 20px);
+  }
+
+  .hide {
+    visibility: hidden;
+  }
 }
