--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -190,6 +190,7 @@ div.radio {
   height: 20px;
   width: 20px;
   background-color: #eee;
+  border: 1px solid var(--blue);
   border-radius: 4px;
   transition: background-color 0.3s;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -199,10 +200,10 @@ div.radio {
   content: "";
   position: absolute;
   display: none;
-  left: 6.5px;
+  left: 6px;
   top: 2px;
-  width: 5px;
-  height: 10px;
+  width: 4px;
+  height: 0;
   border: solid white;
   border-width: 0 3px 3px 0;
   transform: rotate(45deg);
@@ -371,17 +372,246 @@ div.radio {
   }
   .print {
     width: 100%;
-    height: 100%;
+    height: auto;
     /* position: absolute;
     top: 0px;
     left: 0px; */
   }
+  .details {
+    width: 100%;
+    display: block;
+    padding: 0;
+  }
+  .details .container {
+    display: block;
+    width: 100%;
+    background-color: #fff;
+    padding: 0px;
+    border-radius: 5px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+    overflow-x: scroll;
+  }
+  .details .container .title {
+    font-size: 12px;
+    font-weight: 200;
+    position: relative;
+    width: 100%;
+  }
+  .details .container .title::before {
+    content: "";
+    position: absolute;
+    left: 10px;
+    bottom: 0;
+    height: 3px;
+    width: 60px;
+    border-radius: 5px;
+    background: linear-gradient(135deg, #71b7e6, #9b59b6);
+  }
+  .details .container {
+    padding-inline-start: 0%;
+  }
+  .content {
+    width: 100%;
+    padding: 0%;
+  }
+  .print .user-details {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1%;
+    /* justify-content: space-between; */
+    overflow-x: scroll;
+  }
   .print .user-details .input-box {
     width: 100%;
-    width: calc(100% / 4 - 20px);
+    width: calc(100% / 5 - 20px);
   }
 
   .hide {
     visibility: hidden;
+  }
+
+  .print .input-box span.details {
+    display: block;
+    font-weight: 200;
+    font-size: 10px;
+    margin-bottom: 3px;
+    color: var(--blue);
+    text-align: center;
+  }
+  .print .user-details .input-box .input {
+    /* height: 45px; */
+    padding: 3px;
+    width: 100%;
+    outline: none;
+    font-size: 10px;
+    border-radius: 5px;
+    border: 0px solid #ccc;
+    border-bottom-width: 2px;
+    transition: all 0.3s ease;
+    text-align: center;
+  }
+
+  .print .gender-title {
+    font-size: 13px;
+    font-weight: 200;
+    padding: 50px 0;
+  }
+  .print .category {
+    display: flex;
+    width: 80%;
+    margin: 5px 0;
+    justify-content: space-between;
+  }
+  .print .category label {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    font-size: 10px;
+  }
+  .print .category label .dot {
+    height: 18px;
+    width: 18px;
+    border-radius: 50%;
+    margin-right: 10px;
+    background: #d9d9d9;
+    border: 5px solid transparent;
+    transition: all 0.3s ease;
+  }
+  .print div.radio {
+    width: 20px;
+    height: 20px;
+    border: 1px solid black;
+    border-radius: 50%;
+    display: flex;
+    /* justify-content: center;
+    align-items: center; */
+    place-items: center;
+  }
+  .print .radio div {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    place-self: center;
+  }
+  .print .radio div.checked {
+    background-color: var(--blue);
+  }
+  .print .textarea {
+    width: 80%;
+    height: 200px;
+    border: 2px black solid;
+    border-radius: 10px;
+    padding: 20px 20px;
+    margin: 2% 10%;
+    overflow-y: scroll;
+    font-size: 11px;
+  }
+
+  .print .checkbox {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 1% 0;
+  }
+  .print .checkbox .checkbox-container {
+    display: inline-block;
+    position: relative;
+    padding-left: 30px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    font-size: 10px;
+    user-select: none;
+  }
+
+  .print .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 15px;
+    width: 15px;
+    border: 1px solid var(--blue);
+    background-color: #eee;
+    border-radius: 4px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  }
+  .print span.gender {
+    font-size: 12px;
+    font-weight: 200;
+  }
+  .print .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+    left: 4px;
+    top: 0px;
+    width: 3px;
+    height: 7px;
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+  }
+  .print .radio-button-container {
+    width: 80%;
+    display: flex;
+    padding-inline: 10%;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    margin: 1% 0;
+  }
+
+  .print .radio-button {
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+  }
+
+  .print .radio-button__input {
+    display: none;
+  }
+
+  .print .radio-button__label {
+    display: inline-block;
+    padding-left: 30px;
+    margin-bottom: 10px;
+    position: relative;
+    font-size: 10px;
+    color: var(--black1);
+    font-weight: 200;
+    cursor: pointer;
+    text-transform: uppercase;
+    transition: all 0.3s ease;
+  }
+
+  .print .radio-button__custom {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    border: 2px solid #555;
+    transition: all 0.3s ease;
+  }
+  .print
+    .radio-button__input:checked
+    ~ .radio-button__label
+    .radio-button__custom {
+    background-color: var(--blue);
+    border-color: transparent;
+    transform: scale(0.8);
+    box-shadow: 0 0 20px var(--blue);
+  }
+
+  .print .radio-button__input:checked ~ .radio-button__label {
+    color: var(--blue);
+  }
+
+  .print .radio-button__label:hover .radio-button__custom {
+    transform: scale(1);
+    border-color: var(--blue);
+    box-shadow: 0 0 20px var(--blue);
   }
 }
