--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -21,7 +21,7 @@ body {
   justify-content: center;
   align-items: center;
   place-items: center;
-  background: linear-gradient(to bottom, #341077, #413188, #624f8f, #a88abd);
+  background: linear-gradient(to bottom, #341077, #413188, #624f8f, #8f69aa);
 }
 .form {
   max-height: 500px;
