--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -155,8 +155,9 @@ div.radio {
   background: var(--white);
 }
 .button .btn ion-icon {
-  font-size: 25px;
+  font-size: 23px;
   font-weight: bold;
+  text-align: center;
 }
 .checkbox {
   width: 100%;
@@ -203,7 +204,7 @@ div.radio {
   left: 6px;
   top: 2px;
   width: 4px;
-  height: 0;
+  height: 15px;
   border: solid white;
   border-width: 0 3px 3px 0;
   transform: rotate(45deg);
@@ -373,9 +374,10 @@ div.radio {
   .print {
     width: 100%;
     height: auto;
-    /* position: absolute;
-    top: 0px;
-    left: 0px; */
+    float: top;
+  }
+  .main {
+    padding: 0%;
   }
   .details {
     width: 100%;
@@ -392,19 +394,10 @@ div.radio {
     overflow-x: scroll;
   }
   .details .container .title {
-    font-size: 12px;
-    font-weight: 200;
-    position: relative;
-    width: 100%;
+    display: none;
   }
   .details .container .title::before {
-    content: "";
-    position: absolute;
-    left: 10px;
-    bottom: 0;
-    height: 3px;
-    width: 60px;
-    border-radius: 5px;
+    display: none;
     background: linear-gradient(135deg, #71b7e6, #9b59b6);
   }
   .details .container {
@@ -412,19 +405,23 @@ div.radio {
   }
   .content {
     width: 100%;
-    padding: 0%;
+    padding: 0 0 0 1%;
   }
   .print .user-details {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     gap: 1%;
+    overflow: hidden;
     /* justify-content: space-between; */
-    overflow-x: scroll;
   }
   .print .user-details .input-box {
-    width: 100%;
-    width: calc(100% / 5 - 20px);
+    width: calc(100% / 5 - 40px);
+    margin-bottom: 10px;
+  }
+  .rel .user-details .input-box {
+    width: calc(100% / 3 - 20px);
+    margin-bottom: 10px;
   }
 
   .hide {
@@ -433,8 +430,8 @@ div.radio {
 
   .print .input-box span.details {
     display: block;
-    font-weight: 200;
-    font-size: 10px;
+    font-weight: 500;
+    font-size: 12px;
     margin-bottom: 3px;
     color: var(--blue);
     text-align: center;
@@ -448,14 +445,13 @@ div.radio {
     border-radius: 5px;
     border: 0px solid #ccc;
     border-bottom-width: 2px;
-    transition: all 0.3s ease;
     text-align: center;
   }
 
   .print .gender-title {
-    font-size: 13px;
-    font-weight: 200;
-    padding: 50px 0;
+    font-size: 12px;
+    font-weight: 500;
+    padding: 20px 0;
   }
   .print .category {
     display: flex;
@@ -502,10 +498,10 @@ div.radio {
     height: 200px;
     border: 2px black solid;
     border-radius: 10px;
-    padding: 20px 20px;
-    margin: 2% 10%;
-    overflow-y: scroll;
+    padding: 10px 20px;
+    margin: 1% 10%;
     font-size: 11px;
+    overflow-y: hidden;
   }
 
   .print .checkbox {
@@ -537,8 +533,8 @@ div.radio {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   }
   .print span.gender {
-    font-size: 12px;
-    font-weight: 200;
+    font-size: 11px;
+    font-weight: 300;
   }
   .print .checkmark:after {
     content: "";
@@ -547,7 +543,7 @@ div.radio {
     left: 4px;
     top: 0px;
     width: 3px;
-    height: 7px;
+    height: 6px;
     border: solid white;
     border-width: 0 2px 2px 0;
     transform: rotate(45deg);
@@ -607,11 +603,5 @@ div.radio {
 
   .print .radio-button__input:checked ~ .radio-button__label {
     color: var(--blue);
-  }
-
-  .print .radio-button__label:hover .radio-button__custom {
-    transform: scale(1);
-    border-color: var(--blue);
-    box-shadow: 0 0 20px var(--blue);
   }
 }
