--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,15 @@ body {
 .navigation ul li a .icon ion-icon {
   font-size: 1.75rem;
 }
-
+.navigation ul li a img {
+  transition: all 0.5s ease-in-out;
+  width: 80px;
+  height: 80px;
+}
+.navigation ul li a .small {
+  width: 60px;
+  height: 60px;
+}
 .navigation ul li a .title {
   position: relative;
   display: block;
@@ -140,9 +148,17 @@ body {
 }
 
 .big {
-  font-size: 24px;
+  width: 100%;
+  padding: 5px 5px;
+  font-size: 18px;
+  font-weight: 500;
+  position: relative;
+  display: block;
+  text-align: center;
 }
-
+.big.hidden {
+  display: none;
+}
 /* ===================== Main ===================== */
 
 .main {
@@ -622,6 +638,12 @@ body {
 /* ====================== Responsive Design ========================== */
 
 @media (max-width: 991px) {
+  .big.hidden {
+    display: block;
+  }
+  .big {
+    display: none;
+  }
   .navigation {
     left: -300px;
   }
