--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Young+Serif&display=swap");
 .details {
   width: 100%;
   display: block;
@@ -99,7 +100,7 @@
   width: 100%;
   height: 3px;
   background-color: #2a2185;
-  top: 25%;
+  top: 65px;
   left: 0%;
 }
 .input-box .input {
@@ -435,7 +436,10 @@ div.radio {
 
 @media print {
   @page {
-    margin: 0 10mm; /* Set the margin value according to your preference */
+    margin: 10mm 10mm 0mm 10mm; /* Set the margin value according to your preference */
+  }
+  @page :first {
+    margin-top: initial; /* Reset the margin for the first page */
   }
 
   body {
@@ -444,16 +448,17 @@ div.radio {
     /* Reset the body margin to 0 */
   }
   body.war::before {
-    content: "Warrior's Form";
+    content: "The Ethiopian Korea war Veterans's Form";
     width: auto;
     height: 20px;
+    font-family: "Young Serif", "Poppins", sans-serif;
     font-size: 15px;
     font-weight: 300;
     position: absolute;
     padding-bottom: 4px;
     border-bottom: 2px solid var(--blue);
     top: 20px;
-    left: 35%;
+    left: 10%;
     transform: translateX(50%);
   }
   body.rel::before {
@@ -562,26 +567,32 @@ div.radio {
     font-size: 10px;
   }
   .input-box img {
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
     border: 2px solid #2a2185;
     border-radius: 10px;
   }
-  .print .user-details .input-box.wrap {
-    /* margin-top: 70px; */
-    margin-bottom: 15px;
-    width: calc(100% / 4 - 20px);
-  }
+
   .print .user-details .input-box.img {
-    padding-left: calc(100% / 8 - 20px);
+    padding-left: calc(100% / 9 - 20px);
     margin-bottom: 20px;
     width: calc(100% / 4 - 20px);
   }
+
   .print .wrapper.not {
     border-width: 0;
   }
   .print .wrapper.not::before {
     height: 0;
+  }
+  .print .input-box .wrapper_2 {
+    page-break-inside: avoid;
+  }
+  .print #work {
+    page-break-inside: avoid;
+  }
+  .print .break {
+    page-break-inside: avoid;
   }
   .print .input-box .wrapper_1 .input,
   .print .input-box .wrapper_1 span {
