--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -588,6 +588,16 @@ body {
   border-radius: 20px;
 }
 
+.recentCustomers .cardHeader h2::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 5px;
+  width: 175px;
+  height: 3px;
+  background-color: var(--blue);
+}
+
 .recentCustomers table thead {
   /* background: linear-gradient(145deg, #cacad850, #f0f0f050); */
   background-color: #2a218a;
@@ -676,6 +686,9 @@ body {
 }
 
 @media (max-width: 480px) {
+  .recentCustomers .cardHeader h2::before {
+    width: 150px;
+  }
   .cardBox {
     grid-template-columns: repeat(1, 1fr);
   }
