--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -111,14 +111,14 @@
 .input-box .wrapper_1 .input,
 .input-box .wrapper_1 span {
   margin-bottom: 15px;
-  width: calc(100% / 3 - 20px);
+  width: calc(100% / 2 - 20px);
   font-weight: 700;
   color: #070050;
 }
 .input-box .wrapper_2 .input,
 .input-box .wrapper_2 span {
   margin-bottom: 15px;
-  width: calc(100% / 2 - 20px);
+  width: calc(100% / 3 - 20px);
   font-weight: 700;
   color: #070050;
 }
@@ -429,7 +429,7 @@ div.radio {
 
 @media print {
   @page {
-    margin: 10mm 10mm 0mm 10mm; /* Set the margin value according to your preference */
+    margin: 5mm 5mm 5mm 0mm; /* Set the margin value according to your preference */
   }
   @page :first {
     margin-top: 0; /* Reset the margin for the first page */
@@ -513,7 +513,7 @@ div.radio {
   }
   .content {
     width: 100%;
-    padding: 0 0 0 1%;
+    padding: 0 0 0 8mm;
   }
   .print .user-details {
     width: 100%;
@@ -523,7 +523,7 @@ div.radio {
     height: auto;
     gap: 1%;
     overflow: hidden;
-    border: 1px solid red;
+    padding: 0;
     /* justify-content: space-between; */
   }
   .print .user-details .input-box {
@@ -595,14 +595,14 @@ div.radio {
   .print .input-box .wrapper_1 .input,
   .print .input-box .wrapper_1 span {
     margin: 15px 0;
-    width: calc(100% / 3 - 20px);
+    width: calc(100% / 2 - 20px);
     font-weight: 700;
     color: #070050;
   }
   .print .input-box .wrapper_2 .input,
   .print .input-box .wrapper_2 span {
     margin: 15px 0;
-    width: calc(100% / 2 - 20px);
+    width: calc(100% / 3 - 20px);
     font-weight: 700;
     color: #070050;
   }
